# disparity-based-space-vagriant-image-deblurring

./: .gitignore  ACCELERATION.md  CITATION.cff  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: ATTRIBUTION.json
benchmarks/manifests/: public.json
benchmarks/public-assets/: LICENSE.txt
benchmarks/public-assets/gopro-flower/: LICENSE.txt
benchmarks/public-assets/mat3-living-room/: RIGHTS.txt  walkthrough.json
benchmarks/public-assets/procedural-depth/: LICENSE.txt
benchmarks/public-assets/project-owned-historical/: LICENSE.txt
benchmarks/public-assets/synthetic-spatial-psf/: generator-metadata.json
docs/: gallery.js  index.html  styles.css
native/: CMakeLists.txt
native/include/disparity_deblur/: native.hpp
native/src/: bindings.cpp  tv_l1.cpp
showcase/benchmark/: SUMMARY.md  benchmark.json
showcase/benchmark/01_df2_object_motion/: run.json
showcase/benchmark/02_building_low_light/: RIGHTS.txt  run.json
showcase/benchmark/05_new1_parking/: run.json
showcase/benchmark/gopro-flower/: run.json
showcase/benchmark/procedural-depth/: run.json
showcase/benchmark/project-owned-historical/01_df2_object_motion/: run.json
showcase/benchmark/project-owned-historical/02_building_low_light/: run.json
showcase/benchmark/synthetic-spatial-psf/: run.json
src/disparity_deblur/: __init__.py  artifacts.py  backends.py  benchmark.py  cli.py  config.py  cuda_backend.py  image_io.py  kernel_estimation.py  models.py  native_cpp_backend.py  pipeline.py  postprocessing.py  registration.py  restoration.py  segmentation.py  showcase.py
tests/: test_backends.py  test_benchmark.py  test_config.py  test_image_io.py  test_mat3_walkthrough.py  test_native_backend.py  test_pipeline.py  test_postprocessing.py  test_psf.py  test_registration.py  test_restoration.py  test_segmentation.py  test_synthetic_generator.py
tools/: benchmark_backends.py  build_native.py  generate_synthetic_spatial_psf.py  prepare_df2_noisy_auxiliary.py  prepare_gopro_flower.py  prepare_mat3_walkthrough.py
(+1 files in other folders)
