[project]
name = "disparity-deblur"
version = "0.1.0"
description = "Reference reconstruction of disparity-based space-variant image deblurring"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26,<3",
    "opencv-python-headless>=4.11,<5",
    "pymaxflow>=1.3,<2",
    "scipy>=1.11,<2",
]

[dependency-groups]
native = [
    "cmake>=3.28,<5",
    "ninja>=1.11,<2",
    "pybind11>=2.13,<4",
]

[project.scripts]
disparity-deblur = "disparity_deblur.cli:main"
disparity-deblur-benchmark = "disparity_deblur.benchmark:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/disparity_deblur"]
